--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "expo": "~45.0.0",
     "expo-gl": "~11.3.0",
+    "expo-graphics": "^2.0.0",
     "expo-status-bar": "~1.3.0",
     "expo-three": "^6.1.0",
     "react": "17.0.2",
